--- a/package.json
+++ b/package.json
@@ -1,54 +1,29 @@
 {
   "name": "sentimony",
   "version": "1.0.0",
-  "description": "",
+  "description": "sentimony TinyMCE plugin repo",
   "scripts": {
-    "prepublishOnly": "npm run lint && npm run build",
-    "lint": "tslint src/**/*.ts",
-    "build": "grunt",
-    "test": "bedrock-auto -b phantomjs -d src/test/ts/",
-    "test-manual": "bedrock -d src/test/ts/",
-    "start": "grunt webpack"
+    "start": "webpack-dev-server --config config/webpack.config.dev.js --progress --open --inline",
+    "lint": "eslint 'src/**/*.js'",
+    "build": "webpack --config config/webpack.config.prod.js --progress"
   },
-  "keywords": [],
-  "author": "Tiny Technologies Inc.",
+  "author": "",
   "devDependencies": {
-    "@ephox/agar": "latest",
-    "@ephox/bedrock": "latest",
-    "@ephox/mcagar": "latest",
-    "@ephox/swag": "latest",
-    "@ephox/tslint-rules": "latest",
-    "awesome-typescript-loader": "^5.2.1",
-    "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
-    "grunt-shell": "^2.1.0",
-    "grunt-tslint": "^5.0.2",
-    "grunt-webpack": "^3.1.3",
-    "load-grunt-tasks": "^4.0.0",
-    "tinymce": "latest",
-    "ts-loader": "^5.3.0",
-    "tslib": "^1.9.3",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
-    "webpack-livereload-plugin": "^2.1.1"
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "eslint": "^3.12.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "html-webpack-plugin": "^2.26.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^1.16.2"
   },
-  "files": [
-    "lib/main",
-    "lib/demo",
-    "lib/test",
-    "src",
-    "tsconfig.json",
-    "readme.md",
-    "LEGAL.txt",
-    "CHANGELOG.txt",
-    "LICENSE.txt"
-  ],
-  "main": "./lib/main/ts/api/Main.js",
-  "module": "./lib/main/ts/api/Main.js",
-  "types": "./lib/main/ts/api/Main.d.ts",
-  "license": "Apache-2.0"
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "sentiment": "^5.0.1"
+  },
+  "license": "MIT"
 }
